feat(web): allow manual route modification
