# packages/api/models/RoutePreviewIn.ts
@@ -1,0 +1,71 @@
+// @ts-nocheck
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * NoRain API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface RoutePreviewIn
+ */
+export interface RoutePreviewIn {
+    /**
+     * 
+     */
+    profile?: string;
+    /**
+     * 
+     */
+    points: Array<Array<number>>;
+}
+
+/**
+ * Check if a given object implements the RoutePreviewIn interface.
+ */
+export function instanceOfRoutePreviewIn(value: object): value is RoutePreviewIn {
+    if (!('points' in value) || value['points'] === undefined) return false;
+    return true;
+}
+
+export function RoutePreviewInFromJSON(json: any): RoutePreviewIn {
+    return RoutePreviewInFromJSONTyped(json, false);
+}
+
+export function RoutePreviewInFromJSONTyped(json: any, ignoreDiscriminator: boolean): RoutePreviewIn {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'profile': json['profile'] == null ? undefined : json['profile'],
+        'points': json['points'],
+    };
+}
+
+export function RoutePreviewInToJSON(json: any): RoutePreviewIn {
+    return RoutePreviewInToJSONTyped(json, false);
+}
+
+export function RoutePreviewInToJSONTyped(value?: RoutePreviewIn | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'profile': value['profile'],
+        'points': value['points'],
+    };
+}
+
