# packages/api/models/RoutePreviewOut.ts
@@ -1,0 +1,79 @@
+// @ts-nocheck
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * NoRain API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface RoutePreviewOut
+ */
+export interface RoutePreviewOut {
+    /**
+     * 
+     */
+    coordinates: Array<Array<number>>;
+    /**
+     * 
+     */
+    distanceM: number;
+    /**
+     * 
+     */
+    timeS: number;
+}
+
+/**
+ * Check if a given object implements the RoutePreviewOut interface.
+ */
+export function instanceOfRoutePreviewOut(value: object): value is RoutePreviewOut {
+    if (!('coordinates' in value) || value['coordinates'] === undefined) return false;
+    if ((!('distanceM' in (value as Record<string, any>)) && !('distance_m' in (value as Record<string, any>))) || ((value as Record<string, any>)['distanceM'] === undefined && (value as Record<string, any>)['distance_m'] === undefined)) return false;
+    if ((!('timeS' in (value as Record<string, any>)) && !('time_s' in (value as Record<string, any>))) || ((value as Record<string, any>)['timeS'] === undefined && (value as Record<string, any>)['time_s'] === undefined)) return false;
+    return true;
+}
+
+export function RoutePreviewOutFromJSON(json: any): RoutePreviewOut {
+    return RoutePreviewOutFromJSONTyped(json, false);
+}
+
+export function RoutePreviewOutFromJSONTyped(json: any, ignoreDiscriminator: boolean): RoutePreviewOut {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'coordinates': json['coordinates'],
+        'distanceM': json['distance_m'],
+        'timeS': json['time_s'],
+    };
+}
+
+export function RoutePreviewOutToJSON(json: any): RoutePreviewOut {
+    return RoutePreviewOutToJSONTyped(json, false);
+}
+
+export function RoutePreviewOutToJSONTyped(value?: RoutePreviewOut | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'coordinates': value['coordinates'],
+        'distance_m': value['distanceM'],
+        'time_s': value['timeS'],
+    };
+}
+
